--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  --first-type: 'Montserrat', sans-serif;
+  --second-type: 'Elsie Swash Caps', cursive;
+  color: #202020;
+  font-family: var(--first-type);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 920px) {
+  body {
+    background-image: url('./Assets/body-shape.svg'), url('./Assets/bg-1.png');
+    background-repeat: no-repeat, repeat-x, repeat-x;
+    background-position: right top;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  opacity: 0.5;
+}
+
+input {
+  border: none;
+  font-family: var(--first-type);
+  font-size: 16px;
+}
+
+a,
+input {
+  transition: 0.3s ease-in-out;
+}
+
+a:hover,
+a:focus,
+input[type='submit']:hover,
+input[type='submit']:focus {
+  opacity: 0.5;
+}
+
+main {
+  max-width: 1230px;
+  margin: 0 auto 150px auto;
+  padding: 0 16px;
+}
+
+h1 {
+  font-family: var(--second-type);
+  font-size: 5.125em;
+  font-weight: 900;
+}
+
+h2 {
+  font-family: var(--second-type);
+  font-weight: 900;
 }
